--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -15,6 +15,13 @@
     outline: unset;
 }
 
+.body_bg_img2 {
+    background-image: url("/assets/images/png/body-bg-img2.png") !important;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover ;
+}
+
 .gradient_text2 {
     background: linear-gradient(90deg, #A445B2 0%, #D41872 52%, #FF0066 100%);
     background-clip: text;
@@ -682,6 +689,7 @@
 .faq .accordion-button:not(.collapsed) {
     box-shadow: none !important;
 }
+
 .faq .accordion-button::after {
     margin-left: auto;
     content: "";
@@ -1495,6 +1503,13 @@
 }
 
 @media (min-width:1200px) {
+    .body_bg_img2 {
+        background-image: url("/assets/images/png/body-bg-img2.png") !important;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+    }
+
     .AIfooterLeft {
         width: 200px;
         height: 200px;
