--- a/assets/css/style11.css
+++ b/assets/css/style11.css
@@ -367,7 +367,7 @@ left: -24%;
   mask-composite: exclude;
 }
 
-.popup-topright-ellipse {
+.popup-pink-topright-ellipse {
  background: linear-gradient(180deg, #9B77E8 0%, #6854FF 100%);
   height: 365px;
   width: 365px;
