--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@
     --fs-6lg: 36px;
     --fs-xl: 40px;
     --fs-8xl: 48px;
-    --fs-xxl: 52px !important;
+    --fs-xxl: 52px;
     --fs-2xxl: 70px;
     --fs-3xxl: 88.24px;
     /*=============line-height============= */
@@ -74,6 +74,7 @@
     --lh-11xl: 87px;
     --lh-12xl: 103px;
     --lh-6xxl: 54.47px;
+    --lh-5xxl: 52px;
     /*==========colors=========*/
     --clr-black: #010101;
     --c-gray: #cccecf;
@@ -563,6 +564,367 @@
 
 .d_none {
     display: none;
+}
+
+/*===============================top-section==========================*/
+.lh-xs {
+    line-height: var(--lh-xs);
+}
+
+.lh-35 {
+    line-height: var(--lh-35);
+}
+
+.nividia-logo {
+    max-width: 280.01px;
+}
+
+.max-w-445 {
+    max-width: 445px;
+}
+
+.stock_bubble-bg {
+    border-radius: 70% 30% 73% 27% / 43% 32% 68% 57%;
+    animation: stock_bubble_radious 7s linear infinite alternate;
+}
+
+.linear_bg {
+    background: linear-gradient(107.02deg, #00ffe1 12.76%, #6e5df6 91.81%);
+}
+
+.stock_bubble-right_bg {
+    border-radius: 70% 30% 73% 27% / 43% 32% 68% 57%;
+    animation: stock_bubble_radious 7s linear infinite alternate;
+}
+
+@keyframes stock_bubble_radious {
+    25% {
+        border-radius: 48% 52% 18% 82% / 53% 46% 54% 47%;
+    }
+
+    50% {
+        border-radius: 20% 80% 18% 82% / 22% 31% 69% 78%;
+    }
+
+    75% {
+        border-radius: 20% 80% 73% 27% / 22% 59% 41% 78%;
+    }
+
+    100% {
+        border-radius: 70% 30% 73% 27% / 43% 59% 41% 57%;
+    }
+}
+
+.stock_bubble-left {
+    width: 280px !important;
+    height: 300px !important;
+    position: absolute;
+    pointer-events: none !important;
+    top: 55%;
+    transform: translateY(-50%);
+    z-index: -1;
+}
+
+.stock_bubble-right {
+    width: 280px !important;
+    height: 300px !important;
+    position: absolute;
+    pointer-events: none !important;
+    top: 55%;
+    transform: translateY(-50%);
+    z-index: -1;
+}
+
+.white_bg_box {
+    padding: 25px;
+    max-width: 260px;
+    max-height: 280px;
+    width: 100%;
+    background: white;
+}
+
+.text_gradient {
+    background: linear-gradient(171.68deg, #00ffe1 60.26%, #6e5df6 92.73%);
+    background-clip: text !important;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.max-w-502 {
+    max-width: 502.21px;
+}
+
+.readbtn {
+    border: 1px solid #ffffff;
+    background: linear-gradient(107.02deg, #00ffe1 12.76%, #6e5df6 91.81%);
+    padding: 12px 24px;
+    border-radius: 4px;
+    transition: all 0.3s linear;
+}
+
+/* Popup container / */
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9;
+}
+
+.submitFooter_from[disabled]:hover::before {
+    left: -25% !important;
+}
+
+.submitFooter_from[disabled]:hover::after {
+    background: linear-gradient(107.02deg, #00ffe1 12.76%, #6e5df6 91.81%);
+}
+
+.close:hover {
+    opacity: 0.5;
+}
+
+.gradient-leftline {
+    width: 42%;
+    background: linear-gradient(91.31deg, #00FFE1 0.25%, #7E34DC 28.47%, #AEAEAE 50.45%, rgba(110, 93, 246, 0) 95.53%);
+    position: absolute;
+    top: 50%;
+    right: 0;
+    height: 1px;
+    z-index: -1;
+}
+
+.gradient-rightline {
+    width: 42%;
+    background: linear-gradient(91.31deg, #00FFE1 0.25%, #7E34DC 28.47%, #AEAEAE 50.45%, rgba(110, 93, 246, 0) 95.53%);
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 1px;
+    rotate: 180deg;
+    z-index: -1;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    transition: all 300ms linear;
+}
+
+.bgpopup {
+    background-image: url('/assets/images/webp/popup-bg.webp');
+    background-position: center;
+    background-size: cover;
+    border: 1px solid #ffffff4d;
+    padding: 98.5px 60px 83px;
+    max-width: 1140px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    width: 100%;
+}
+
+.popup_form {
+    padding: 20px;
+    background: #ffffff;
+    border: 1px solid #0000001A;
+    border-radius: 15px;
+    max-width: 528px;
+}
+
+.popup_input {
+    border: 1px solid #00000033;
+    outline: none;
+    border-radius: 6px;
+    padding: 13px;
+}
+
+.popup_button {
+    background: linear-gradient(180deg, #9B77E8 0%, #6854FF 100%);
+    box-shadow: 0px 2px 10px 0px #ae01ff66;
+    padding: 12px 12px;
+    border: none;
+    border-radius: 6px;
+}
+
+.blur_btn {
+    padding: 17px 12.79px;
+    z-index: 1;
+    background: #ffffff21;
+    backdrop-filter: blur(50px);
+    position: relative;
+}
+
+.stock_rate_right {
+    position: absolute;
+    bottom: -10%;
+    right: -26%;
+}
+
+.nividia-topellipse {
+    width: 240px;
+    height: 240px;
+    background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+    filter: blur(200px);
+    position: absolute;
+    top: 0;
+    left: -16%;
+}
+
+.nividia-bottomellipse {
+    width: 240px;
+    height: 240px;
+    background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+    filter: blur(200px);
+    position: absolute;
+    top: 10%;
+    right: -16%;
+}
+
+.microsoft-ellipse {
+    width: 346px;
+    height: 346px;
+    background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+    filter: blur(200px);
+    position: absolute;
+    top: 20%;
+    left: -30%;
+}
+
+.aws-ellipse {
+    width: 204px;
+    height: 204px;
+    background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+    filter: blur(200px);
+    position: absolute;
+    top: 35%;
+    right: -30%;
+}
+
+.plantir-ellipse {
+    width: 280px;
+    height: 280px;
+    background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+    filter: blur(200px);
+    position: absolute;
+    top: 52%;
+    left: -28%;
+}
+
+.crowd-ellipse {
+    width: 304px;
+    height: 304px;
+    background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+    filter: blur(200px);
+    position: absolute;
+    top: 60%;
+    right: -28%;
+}
+
+.ui-ellipse {
+    width: 244px;
+    height: 204px;
+    background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+    filter: blur(200px);
+    position: absolute;
+    top: 70%;
+    left: -28%;
+}
+
+.ui-ellipse2 {
+    width: 25px;
+    height: 250px;
+    background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+    filter: blur(200px);
+    position: absolute;
+    top: 78%;
+    right: -24%;
+}
+
+.arista-ellipse2 {
+    width: 220px;
+    height: 226px;
+    background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+    filter: blur(200px);
+    position: absolute;
+    top: 90%;
+    left: -24%;
+}
+
+.stock-2 {
+    padding: 22px 31px 36px 62px !important;
+}
+
+.stock-3 {
+    padding: 62px 35px !important;
+}
+
+.stock-4 {
+    padding: 90px 40px !important;
+}
+
+.stock-5 {
+    padding: 64px 12px !important;
+}
+
+.stock-6 {
+    padding: 68px 32.68px !important;
+}
+
+.stock-7 {
+    padding: 96px 19px !important;
+}
+
+.stock_rate_left {
+    position: absolute;
+    bottom: -14%;
+    left: -20%;
+}
+
+.blur_btn::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    background: linear-gradient(171.68deg, #00ffe1 39.97%, #6e5df6 107.69%) border-box;
+    -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+    mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+    -webkit-mask-composite: destination-out;
+    mask-composite: exclude;
+}
+
+.popup-topright-ellipse {
+    background: linear-gradient(180deg, #9B77E8 0%, #6854FF 100%);
+    height: 365px;
+    width: 365px;
+    filter: blur(300px);
+    top: -40%;
+    right: -20%;
+    overflow: hidden;
+    position: absolute;
+}
+
+.popup-bottomleft-ellipse {
+    background: linear-gradient(180deg, #9B77E8 0%, #6854FF 100%);
+    height: 365px;
+    width: 365px;
+    filter: blur(200px);
+    bottom: -40%;
+    left: -20%;
+    overflow: hidden;
+    position: absolute;
 }
 
 /*=====================Header-section===================*/
@@ -1997,6 +2359,7 @@ numberinput-header .numberinput-header[type="number"] {
 }
 
 @media (max-width:991.5px) {
+
     :root {
         --fs-xs: 14px !important;
         --fs-6lg: 25px !important;
@@ -2012,6 +2375,20 @@ numberinput-header .numberinput-header[type="number"] {
         --lh-9xl: 50px !important;
         --lh-7xl: 42px !important;
         --lh-xxl: 23px !important;
+    }
+
+    .bgpopup {
+        max-width: 690px !important;
+        padding: 30px !important;
+        overflow-y: scroll !important;
+        height: 630px !important;
+        width: 100%;
+    }
+
+    .stock_rate_right {
+        position: absolute;
+        bottom: -22%;
+        right: -26%;
     }
 
     .start_trading_box {
@@ -2082,9 +2459,8 @@ numberinput-header .numberinput-header[type="number"] {
         --fs-8xl: 24px !important;
         --fs-xxl: 26px !important;
         --fs-3xxl: 51px !important;
-
         /*=============line-height=========== */
-        --lh-xsm: 22px !important;
+        --lh-xsm: 21px !important;
         --lh-sm: 22px !important;
         --lh-md: 22px !important;
         --lh-2md: 25px !important;
@@ -2097,6 +2473,46 @@ numberinput-header .numberinput-header[type="number"] {
         --lh-9xl: 45px !important;
         --lh-xxl: 23px !important;
         --lh-10xl: 48px !important;
+        --lh-5xxl: 26px !important;
+    }
+
+
+    .bgpopup {
+        padding: 83px 30px 84px 30px !important;
+        width: 100%;
+        max-width: 420px !important;
+    }
+
+    .blur_btn {
+        padding: 12px;
+        z-index: 1;
+        background: #ffffff21;
+        backdrop-filter: blur(50px);
+        position: relative;
+    }
+
+    .stock_rate_left {
+        position: absolute;
+        bottom: -14%;
+        left: 0;
+    }
+
+    .stock_rate_right {
+        position: absolute;
+        bottom: -14%;
+        right: 0;
+    }
+
+    .rate-arrow {
+        width: 40px !important;
+    }
+
+    .w-sm-100 {
+        width: 100% !important;
+    }
+
+    .bgpopup {
+        padding: 40px 16px 40px 16px !important;
     }
 
     .sign_up_position {
@@ -2375,6 +2791,41 @@ numberinput-header .numberinput-header[type="number"] {
 }
 
 @media (min-width: 768px) {
+    .stock_bubble-right {
+        width: 360px !important;
+        height: 350px !important;
+        position: absolute;
+        pointer-events: none !important;
+        top: 55%;
+        transform: translateY(-50%);
+        z-index: -1;
+    }
+
+    .stock_bubble-left {
+        width: 360px !important;
+        height: 350px !important;
+        position: absolute;
+        pointer-events: none !important;
+        top: 55%;
+        transform: translateY(-50%);
+        z-index: -1;
+    }
+
+    .white_bg_box {
+        padding: 30px;
+        max-width: 335px;
+        max-height: 300px;
+        width: 100%;
+        background: white;
+    }
+
+    .popup_form {
+        padding: 20px;
+        background: #ffffff;
+        border: 1px solid #0000001A;
+        border-radius: 15px;
+        max-width: 528px;
+    }
 
     .social_img {
         max-width: 190px
@@ -2474,6 +2925,144 @@ numberinput-header .numberinput-header[type="number"] {
 }
 
 @media (min-width: 992px) {
+    .nividia-bottomellipse {
+        width: 346px;
+        height: 346px;
+        background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+        filter: blur(200px);
+        position: absolute;
+        top: 10%;
+        right: -16%;
+    }
+
+    .microsoft-ellipse {
+        width: 346px;
+        height: 346px;
+        background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+        filter: blur(200px);
+        position: absolute;
+        top: 20%;
+        left: -30%;
+    }
+
+    .aws-ellipse {
+        width: 314px;
+        height: 314px;
+        background: linear-gradient(171.68deg, #00FFE1 39.97%, #6E5DF6 107.69%);
+        filter: blur(200px);
+        position: absolute;
+        top: 35%;
+        right: -30%;
+    }
+
+    .plantir-ellipse {
+        width: 340px;
+        height: 340px;
+    }
+
+    .crowd-ellipse {
+        width: 344px;
+        height: 344px;
+    }
+
+    .ui-ellipse {
+        width: 344px;
+        height: 344px;
+    }
+
+    .nividia-topellipse {
+        width: 346px;
+        height: 346px;
+    }
+
+    .nividia-bottomellipse {
+        width: 346px;
+        height: 346px;
+    }
+
+    .ui-ellipse2 {
+        width: 304px;
+        height: 304px;
+    }
+
+    .arista-ellipse2 {
+        width: 346px;
+        height: 346px;
+    }
+
+    .stock-2 {
+        padding: 22px 31px 36px 62px !important;
+    }
+
+    .stock-3 {
+        padding: 78px 35px !important;
+    }
+
+    .stock-4 {
+        padding: 133px 40px !important;
+    }
+
+    .stock-5 {
+        padding: 114px 12px !important;
+    }
+
+    .stock-6 {
+        padding: 115px 32.68px !important;
+    }
+
+    .stock-7 {
+        padding: 142px 19px !important;
+    }
+
+    .white_bg_box {
+        padding: 49px 59.79px 79px 27.21px;
+        max-width: 375px;
+        max-height: 340px;
+        width: 100%;
+        background: white;
+    }
+
+    .stock_bubble-left {
+        width: 460px !important;
+        height: 421px !important;
+        position: absolute;
+        pointer-events: none !important;
+        top: 55%;
+        left: -20%;
+        transform: translateY(-50%);
+        z-index: -1;
+    }
+
+    .stock_bubble-right {
+        width: 461px !important;
+        height: 421px !important;
+        position: absolute;
+        pointer-events: none !important;
+        top: 55%;
+        transform: translateY(-50%);
+        z-index: -1;
+    }
+
+    .popup_form {
+        padding: 30px;
+        background: #ffffff;
+        border: 1px solid #0000001A;
+        border-radius: 15px;
+        max-width: 528px;
+    }
+}
+
+@media (max-width: 1200px) {
+    .popup_form {
+        max-width: 457px !important;
+    }
+
+    .bgpopup {
+        padding: 83px 30px 84px 30px !important;
+        max-width: 1000px !important;
+        width: 100%;
+    }
+
     .mw_lg_397 {
         max-width: 397px;
     }
